Update name tags

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -250,6 +250,7 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
@@ -309,6 +310,7 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
@@ -338,6 +340,7 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
@@ -407,6 +410,7 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
@@ -436,6 +440,7 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
         UploadSigningUserName: !Ref UploadSigningUserName
         UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
@@ -468,6 +473,7 @@ Resources:
   #       NotificationsStackName: !Ref NotificationsStackName
   #       EnvironmentType: !Ref EnvironmentType
   #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+  #       RootStackName: !Ref RootStackName
   #     Tags:
   #       - Key: Environment
   #         Value: !Ref EnvironmentType
@@ -497,6 +503,7 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
