Update name tags

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -96,6 +96,7 @@ Resources:
   #       NotificationsStackName: !Ref NotificationsStackName
   #       EnvironmentType: !Ref EnvironmentType
   #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+  #       RootStackName: !Ref RootStackName
   #     Tags:
   #       - Key: Environment
   #         Value: !Ref EnvironmentType
@@ -128,6 +129,7 @@ Resources:
   #       NotificationsStackName: !Ref NotificationsStackName
   #       EnvironmentType: !Ref EnvironmentType
   #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+  #       RootStackName: !Ref RootStackName
   #       EcsAsgOutboundTrafficSecurityGroupId: !Ref EcsAsgOutboundTrafficSecurityGroupId
   #     Tags:
   #       - Key: Environment
@@ -157,6 +159,7 @@ Resources:
   #       SecretsStackName: !Ref SecretsStackName
   #       NotificationsStackName: !Ref NotificationsStackName
   #       EnvironmentType: !Ref EnvironmentType
+  #       RootStackName: !Ref RootStackName
   #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
   #       SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
   #     Tags:
