--- a/stacks/static-sites.yml
+++ b/stacks/static-sites.yml
@@ -1,4 +1,4 @@
-# stacks/static-sites/root.yml
+# stacks/static-sites.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: Sites that are deployed through S3 as static websites
