--- a/stacks/provisioned/castle.yml
+++ b/stacks/provisioned/castle.yml
@@ -16,6 +16,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  RootStackName: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
@@ -64,7 +65,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Metrics-${EnvironmentType} # TODO
+          Value: !Sub ${RootStackName}_castle
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
