Update name tags

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -190,6 +190,7 @@ Resources:
   #       NotificationsStackName: !Ref NotificationsStackName
   #       EnvironmentType: !Ref EnvironmentType
   #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+  #       RootStackName: !Ref RootStackName
   #     Tags:
   #       - Key: Environment
   #         Value: !Ref EnvironmentType
@@ -219,6 +220,7 @@ Resources:
   #       NotificationsStackName: !Ref NotificationsStackName
   #       EnvironmentType: !Ref EnvironmentType
   #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+  #       RootStackName: !Ref RootStackName
   #       AmazonSesSmtpCredentialsGeneratorServiceToken: !Ref AmazonSesSmtpCredentialsGeneratorServiceToken
   #       UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
   #       UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
@@ -283,6 +285,7 @@ Resources:
   #       NotificationsStackName: !Ref NotificationsStackName
   #       EnvironmentType: !Ref EnvironmentType
   #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+  #       RootStackName: !Ref RootStackName
   #       AmazonSesSmtpCredentialsGeneratorServiceToken: !Ref AmazonSesSmtpCredentialsGeneratorServiceToken
   #     Tags:
   #       - Key: Environment
