--- a/stacks/provisioned/dovetail-router.yml
+++ b/stacks/provisioned/dovetail-router.yml
@@ -16,6 +16,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  RootStackName: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   SecretsBase: { Type: String }
   EcrRegion: { Type: String }
@@ -59,7 +60,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Metrics-${EnvironmentType} # TODO
+          Value: !Sub ${RootStackName}_dovetail-router
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
