Update name tags

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -378,6 +378,7 @@ Resources:
   #       NotificationsStackName: !Ref NotificationsStackName
   #       EnvironmentType: !Ref EnvironmentType
   #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+  #       RootStackName: !Ref RootStackName
   #       VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
   #       VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
   #       VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
