--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -22,6 +22,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  RootStackName: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   VpcCidrBlock: { Type: String }
   VpcIpv6CidrBlocks: { Type: String }
@@ -86,7 +87,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Metrics-${EnvironmentType} # TODO
+          Value: !Sub ${RootStackName}_networks_public-web
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -315,7 +316,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub AppName-${EnvironmentType} # TODO
+          Value: !Sub ${RootStackName}_networks_sphinx-searchd
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -351,7 +352,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Networks-${EnvironmentType} # TODO
+          Value: !Sub ${RootStackName}_networks_sphinx-web
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
