Update name tags

--- a/stacks/shared-vpc/private-subnets.yml
+++ b/stacks/shared-vpc/private-subnets.yml
@@ -52,7 +52,7 @@ Resources:
         - Key: Name
           Value:
             Fn::Sub:
-              - ${RootStackName}_private-1_${ZoneName}
+              - ${RootStackName}_shared_private-1_${ZoneName}
               - ZoneName: !Select [0, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -86,7 +86,7 @@ Resources:
         - Key: Name
           Value:
             Fn::Sub:
-              - ${RootStackName}_private-2_${ZoneName}
+              - ${RootStackName}_shared_private-2_${ZoneName}
               - ZoneName: !Select [1, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -120,7 +120,7 @@ Resources:
         - Key: Name
           Value:
             Fn::Sub:
-              - ${RootStackName}_private-3_${ZoneName}
+              - ${RootStackName}_shared_private-3_${ZoneName}
               - ZoneName: !Select [2, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
