--- a/stacks/shared-vpc/public-subnets.yml
+++ b/stacks/shared-vpc/public-subnets.yml
@@ -87,7 +87,7 @@ Resources:
         - Key: Name
           Value:
             Fn::Sub:
-              - ${RootStackName}_public-1_${ZoneName}
+              - ${RootStackName}_shared_public-1_${ZoneName}
               - ZoneName: !Select [0, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -121,7 +121,7 @@ Resources:
         - Key: Name
           Value:
             Fn::Sub:
-              - ${RootStackName}_public-2_${ZoneName}
+              - ${RootStackName}_shared_public-2_${ZoneName}
               - ZoneName: !Select [1, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -155,7 +155,7 @@ Resources:
         - Key: Name
           Value:
             Fn::Sub:
-              - ${RootStackName}_public-3_${ZoneName}
+              - ${RootStackName}_shared_public-3_${ZoneName}
               - ZoneName: !Select [2, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
