Add new CMS stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -141,36 +141,36 @@ Resources:
   #     TemplateURL: !Sub ${TemplateUrlPrefix}/castle.yml
   #     TimeoutInMinutes: 40
 
-  # CmsStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Properties:
-  #     NotificationARNs:
-  #       - !Ref CloudFormationNotificationArn
-  #     Parameters:
-  #       AlbFullName: !Ref AlbFullName
-  #       AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
-  #       EcsClusterArn: !Ref EcsClusterArn
-  #       VpcId: !Ref VpcId
-  #       SecretsBase: !Ref SecretsBase
-  #       EcrImageTag: !Ref CmsEcrImageTag
-  #       SecretsVersion: !Ref CmsSecretsVersion
-  #       AlbListenerRulePriorityPrefix: !Ref CmsSharedAlbListenerRulePriorityPrefix
-  #       EcrRegion: !Ref EcrRegion
-  #       SecretsStackName: !Ref SecretsStackName
-  #       NotificationsStackName: !Ref NotificationsStackName
-  #       EnvironmentType: !Ref EnvironmentType
-  #       RootStackName: !Ref RootStackName
-  #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-  #       SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
-  #     Tags:
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     TemplateURL: !Sub ${TemplateUrlPrefix}/cms.yml
-  #     TimeoutInMinutes: 20
+  CmsStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref CmsEcrImageTag
+        SecretsVersion: !Ref CmsSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref CmsSharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        RootStackName: !Ref RootStackName
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/cms.yml
+      TimeoutInMinutes: 20
 
   # DovetailRouterStack:
   #   Type: AWS::CloudFormation::Stack
