Enable container insights in production

--- a/stacks/shared-ecs-cluster.yml
+++ b/stacks/shared-ecs-cluster.yml
@@ -7,10 +7,16 @@ Description: >- # TODO
 Parameters:
   EnvironmentType: { Type: String }
 
+Conditions:
+  IsProduction: !Equals [!Ref EnvironmentType, Production]
+
 Resources:
   EcsCluster:
     Type: AWS::ECS::Cluster
     Properties:
+      ClusterSettings:
+        - Name: containerInsights
+          Value: !If [IsProduction, enabled, disabled]
       Tags:
         - Key: Project
           Value: platform.prx.org
