Fix ID health check path

--- a/stacks/provisioned/id.yml
+++ b/stacks/provisioned/id.yml
@@ -48,7 +48,7 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
       HealthCheckIntervalSeconds: 15
-      HealthCheckPath: /
+      HealthCheckPath: /healthcheck
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 3
       Port: 80
