Update stack descriptions

--- a/stacks/provisioned/castle.yml
+++ b/stacks/provisioned/castle.yml
@@ -1,7 +1,9 @@
 # stacks/provisioned/castle.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: metrics.prx.org application running in Docker # TODO
+Description: >-
+  Creates an ECS service for Castle, along with target group and listener rule
+  for the shared ALB. Also creates a Redis cluster for the service to use.
 
 Parameters:
   kContainerName:
