--- a/stacks/provisioned/publish.yml
+++ b/stacks/provisioned/publish.yml
@@ -1,7 +1,11 @@
 # stacks/provisioned/publish.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: metrics.prx.org application running in Docker # TODO
+Description: >-
+  Creates an ECS service for Play, along with target group and listener rule
+  for the shared ALB. Also creates an S3 bucket that Publish uses to upload
+  user content to, along with a CloudFront distribution that provides public
+  access to contents of the bucket.
 
 Parameters:
   kContainerName:
