--- a/stacks/provisioned/remix.yml
+++ b/stacks/provisioned/remix.yml
@@ -1,7 +1,10 @@
 # stacks/provisioned/remix.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: metrics.prx.org application running in Docker # TODO
+Description: >-
+  Creates an ECS service for the Remix web server, along with target group and
+  listener rule for the shared ALB. Also creates an ECS task for the Remix
+  worker application, along with an event rule to run the worker periodically.
 
 Parameters:
   kWebContainerName:
