--- a/stacks/provisioned/styleguide.yml
+++ b/stacks/provisioned/styleguide.yml
@@ -1,7 +1,9 @@
 # stacks/provisioned/metrics.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: metrics.prx.org application running in Docker # TODO
+Description: >-
+  Creates an ECS service for Styleguide, along with target group and listener
+  rule for the shared ALB.
 
 Parameters:
   kContainerName:
