--- a/stacks/provisioned/grove.yml
+++ b/stacks/provisioned/grove.yml
@@ -1,7 +1,9 @@
 # stacks/provisioned/grove.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: grove.prx.org application running in Docker # TODO
+Description: >-
+  Creates an ECS service for Grove, along with target group and listener rule
+  for the shared ALB.
 
 Parameters:
   kContainerName:
