--- a/stacks/provisioned/id.yml
+++ b/stacks/provisioned/id.yml
@@ -1,7 +1,10 @@
 # stacks/provisioned/id.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: metrics.prx.org application running in Docker # TODO
+Description: >-
+  Creates an ECS service for ID, along with target group and listener rule for
+  the shared ALB. Also creates a set of SES SMTP credentials for the service to
+  use.
 
 Parameters:
   kContainerName:
