Update stack descriptions

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -2,11 +2,14 @@
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >- # TODO
-  tktktk
+  Creates an Auto Scaling Group that launches EC2 instances into the shared ECS
+  cluster. Also creates a capacity provider associated with the shared ECS
+  cluster that helps manage the size of the ASG. Instances launched from the
+  ASG allow all outbound traffic. Inbound traffic is permitted using several
+  security groups.
 
 Parameters:
   EnvironmentType: { Type: String }
-  EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   KeyPairName: { Type: "AWS::EC2::KeyPair::KeyName" }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
