--- a/stacks/shared-ecs-cluster.yml
+++ b/stacks/shared-ecs-cluster.yml
@@ -1,8 +1,9 @@
 # stacks/shared-ecs-cluster.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: >- # TODO
-  tktktk
+Description: >-
+  Creates an ECS cluster that's intended to be shared by most applications
+  managed by the root stack.
 
 Parameters:
   EnvironmentType: { Type: String }
