--- a/stacks/shared-vpc/flow-logs.yml
+++ b/stacks/shared-vpc/flow-logs.yml
@@ -1,7 +1,7 @@
 # stacks/shared-vpc/flow-logs.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: tktktk # TODO
+Description: Creates VPC flow logs for the shared VPC.
 
 Parameters:
   EnvironmentType: { Type: String }
