--- a/stacks/shared-vpc/gateway-endpoints.yml
+++ b/stacks/shared-vpc/gateway-endpoints.yml
@@ -1,7 +1,7 @@
 # stacks/shared-vpc/gateway-endpoints.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: Gateway VPC endpoints
+Description: Creates various Gateway VPC endpoints in the shared VPC
 
 Parameters:
   VpcId: { Type: "AWS::EC2::VPC::Id" }
