--- a/stacks/shared-vpc/interface-endpoints.yml
+++ b/stacks/shared-vpc/interface-endpoints.yml
@@ -1,7 +1,11 @@
 # stacks/shared-vpc/interface-endpoints.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: Interface VPC endpoints
+Description: >-
+  Creates various Interface VPC endpoints in the shared VPC. These are
+  primarily intended to support access for instances and tasks in private
+  networks, but are also utilized by instances and tasks in public networks by
+  virtue of how the Endpoints function.
 
 Parameters:
   EnvironmentType: { Type: String }
