--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -1,7 +1,9 @@
 # stacks/shared-vpc/private-network-acl.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: Private network ACL
+Description: >-
+  Creates a Network ACL and rules for subnets of the private subnets in the
+  shared VPC.
 
 Parameters:
   EnvironmentType: { Type: String }
