--- a/stacks/shared-vpc/private-subnets.yml
+++ b/stacks/shared-vpc/private-subnets.yml
@@ -1,7 +1,9 @@
 # stacks/shared-vpc/private-subnets.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: Private subnets for the VPC
+Description: >-
+  Creates private subnets in the shared VPC, which have no internet gateway,
+  and a route table for the subnets.
 
 Parameters:
   EnvironmentType: { Type: String }
