--- a/stacks/shared-vpc/public-subnets.yml
+++ b/stacks/shared-vpc/public-subnets.yml
@@ -1,7 +1,9 @@
 # stacks/shared-vpc/public-subnets.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: Public subnets for the VPC
+Description: >-
+  Creates public subnets in the shared VPC, along with the internet gateway
+  that makes them public, and a route table for the subnets and gateway.
 
 Parameters:
   EnvironmentType: { Type: String }
