Turn on new Networks stack

--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -1,7 +1,13 @@
 # stacks/provisioned/networks.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: metrics.prx.org application running in Docker # TODO
+Description: >-
+  Creates an ECS service for the public Networks web server, along with target
+  group and listener rule for the shared ALB. Also creates an ECS service for
+  the internal Networks Sphinx server, along with a network load balancer, and
+  target groups and listeners for web and Sphinx traffic on the NLB. The NLB
+  and Sphinx service run in the private subnet of the shared VPC. A new TLS
+  certificate is created for the NLB.
 
 Parameters:
   kWebContainerName:
