Use correct Sphinx log group

--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -541,7 +541,7 @@ Resources:
           LogConfiguration:
             LogDriver: awslogs
             Options:
-              awslogs-group: !Ref PublicWebTaskLogGroup
+              awslogs-group: !Ref SphinxServerTaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
           Memory: 400 # TODO
