Add KMS VPC Endpoint security group

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -31,6 +31,7 @@ Parameters:
   EchoServiceToken: { Type: String }
   EcsAsgOutboundTrafficSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
   EcsLaunchEndpointsAccessSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
+  KmsEndpointAccessSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
 
   PublishEcrImageTag: { Type: String }
   PublishSecretsVersion: { Type: String }
@@ -388,6 +389,7 @@ Resources:
         SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
         EchoServiceToken: !Ref EchoServiceToken
         EcsLaunchEndpointsAccessSecurityGroupId: !Ref EcsLaunchEndpointsAccessSecurityGroupId
+        KmsEndpointAccessSecurityGroupId: !Ref KmsEndpointAccessSecurityGroupId
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
