--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -48,6 +48,7 @@ Parameters:
   SharedMemcachedEndpointPort: { Type: String }
   EchoServiceToken: { Type: String }
   EcsLaunchEndpointsAccessSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
+  KmsEndpointAccessSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -439,6 +440,7 @@ Resources:
           SecurityGroups:
             - !GetAtt SphinxServerInboundSecurityGroup.GroupId
             - !Ref EcsLaunchEndpointsAccessSecurityGroupId
+            - !Ref KmsEndpointAccessSecurityGroupId
           AssignPublicIp: DISABLED
           Subnets:
             - !Ref VpcPrivateSubnet1Id
