--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -19,6 +19,7 @@ Parameters:
   EcsClusterName: { Type: String }
   AlbTargetInstanceSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
   EcsLaunchEndpointsAccessSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
+  KmsEndpointAccessSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -159,6 +160,7 @@ Resources:
               - !GetAtt InboundSshTrafficSecurityGroup.GroupId
               - !Ref AlbTargetInstanceSecurityGroupId
               - !Ref EcsLaunchEndpointsAccessSecurityGroupId
+              - !Ref KmsEndpointAccessSecurityGroupId
             Ipv6AddressCount: 1
         # TagSpecifications:
         UserData:
