Add missing output

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -280,3 +280,7 @@ Outputs:
       The ID of a security group that has VPC Endpoint access to AWS services
       required to launch tasks in ECS.
     Value: !GetAtt InterfaceEndpointsStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
+  KmsEndpointAccessSecurityGroupId:
+    Description: >-
+      The ID of a security group that has KMS VPC Endpoint access.
+    Value: !GetAtt InterfaceEndpointsStack.Outputs.KmsEndpointAccessSecurityGroupId
