--- a/stacks/shared-vpc/interface-endpoints.yml
+++ b/stacks/shared-vpc/interface-endpoints.yml
@@ -227,6 +227,21 @@ Resources:
       VpcEndpointType: Interface
       VpcId: !Ref VpcId
 
+  KmsVpcEndpoint:
+    # https://docs.aws.amazon.com/kms/latest/developerguide/kms-vpc-endpoint.html
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      PrivateDnsEnabled: true
+      SecurityGroupIds:
+        - !Ref KmsEndpointInboundTrafficSecurityGroup
+      ServiceName: !Sub com.amazonaws.${AWS::Region}.kms
+      SubnetIds:
+        - !Ref PublicSubnet1Id
+        - !Ref PublicSubnet2Id
+        - !Ref PublicSubnet3Id
+      VpcEndpointType: Interface
+      VpcId: !Ref VpcId
+
 Outputs:
   EcsLaunchEndpointsAccessSecurityGroupId:
     Value: !GetAtt EcsLaunchEndpointsAccessSecurityGroup.GroupId
