Add load balancer security group output

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -365,6 +365,11 @@ Outputs:
   TargetInstanceSecurityGroupId:
     Description: The group ID of the ALB target instance security group
     Value: !GetAtt TargetInstanceSecurityGroup.GroupId
+  LoadBalancerInboundForwardingSecurityGroupId:
+    Description: >-
+      The group ID of the ALB security group that allows inbound web traffic
+      and outbound traffic to instances
+    Value: !GetAtt LoadBalancerInboundForwardingSecurityGroup.GroupId
   VanityAlbDomain:
     Description: >-
       The vanity wildcard domain configured for the ALB's certificate, and
