--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -997,6 +997,9 @@ Resources:
         UploadSigningUserName: !GetAtt ServerlessRootStack.Outputs.UploadSigningUserName
         UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
+        VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
+        VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
+        VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
         VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
         VpcPrivateSubnet2Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
         VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
@@ -1007,6 +1010,7 @@ Resources:
         EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
         EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
         KmsEndpointAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.KmsEndpointAccessSecurityGroupId
+        LoadBalancerInboundForwardingSecurityGroupId: !GetAtt SharedAlbStack.Outputs.LoadBalancerInboundForwardingSecurityGroupId
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
