Add DNS validation record

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1577,6 +1577,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _8d09676a833865f3cf06c51a75ead3e6.play.${Domain}
+        - ResourceRecords:
+            - _22643ddfaf18052fb2db89f0e05cc559.zjfbrrwmzc.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _16d5396a2320cf95e39991f091461469.feeder.${Domain}
   Classy:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
