Add Feeder resources

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -247,8 +247,6 @@ Resources:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
       Parameters:
-        AlbFullName: !Ref AlbFullName
-        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
         SecretsBase: !Ref SecretsBase
@@ -260,6 +258,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         RootStackName: !Ref RootStackName
+        EchoServiceToken: !Ref EchoServiceToken
         VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
         VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
         VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
