--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -317,7 +317,9 @@ Resources:
   WildcardUtilityRecordSetGroup:
     Type: AWS::Route53::RecordSetGroup
     Properties:
-      Comment: Record sets for dualstack web traffic to a metrics instance
+      Comment: !Sub >-
+        Record sets for dualstack web traffic to the shared ${EnvironmentType}
+        ALB
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: AAAA
